Essa versão possui de vans
Falta apenas : Cadastro, Adicionar Van, Deletar Van, Fazer update

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.ProjetoIntegrador"
         tools:targetApi="31">
         <activity
+            android:name=".addVanPage"
+            android:exported="false" />
+        <activity
+            android:name=".ListaVans"
+            android:exported="false" />
+        <activity
             android:name=".Login"
             android:exported="false" />
         <activity
